--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-intersection-observer": "^9.4.1",
     "react-use": "^17.4.0",
     "schema-dts": "^1.1.0",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.2.0",
